--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -27,6 +27,9 @@ jobs:
           aws configure set region $AWS_REGION
           aws ecr get-login-password --region $AWS_REGION | docker login --username AWS --password-stdin ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com
 
+      - name: Build Docker Image
+        run: docker build -t my-app ./app  # Certifique-se de que o Dockerfile está no caminho ./app ou ajuste o caminho
+
       - name: Terraform Init
         run: terraform init
 
